# Aerial-cable-towed-system-carrying-flexible-payloads

./: .gitignore  LICENSE  README.md
ls2n_drone_bridge/: README.md  package.xml  setup.cfg  setup.py
ls2n_drone_bridge/config/: onboard_nodes.yaml  sitl_crazy2fly_params.yaml  sitl_crazyflie2_params.yaml
ls2n_drone_bridge/launch/: drone_bridge.launch.py  sitl_drone_bridge.launch.py
ls2n_drone_bridge/ls2n_drone_bridge/: common.py  controllers.py  drone_bridge.py  px4_com.py
ls2n_drone_bridge/onboard/: install_onboard.sh  onboard_package.xml  onboard_setup.py
ls2n_drone_command_center/: README.md  package.xml  setup.cfg  setup.py
ls2n_drone_command_center/launch/: cc_single_drone.launch.py  joystick.launch.py  mocap.launch.py  multi_control.launch.py  sitl_cc_single_drone.launch.py  sitl_multi_control.launch.py
ls2n_drone_command_center/ls2n_drone_command_center/: joystick_connect.py  multi_control.py  qualisys_bridge.py  trajectory_publisher.py
ls2n_drone_onboard/: README.md  package.xml  setup.cfg  setup.py
ls2n_drone_onboard/config/: observer_params.yaml  velocity_joystick_control_params.yaml
ls2n_drone_onboard/launch/: observers.launch.py  position_control.launch.py  sitl_observers.launch.py  sitl_position_control.launch.py  sitl_velocity_joystick_control.launch.py  velocity_joystick_control.launch.py
ls2n_drone_onboard/ls2n_drone_onboard/: observers.py  position_control.py  velocity_joystick_control.py
ls2n_drone_ros2/: README.md
ls2n_drones_cable/ls2n_drones_cable/: package.xml  setup.cfg  setup.py
ls2n_drones_cable/ls2n_drones_cable/launch/: sitl_drones_cables.launch.py
ls2n_drones_cable/ls2n_drones_cable/ls2n_drones_cable/: drones_cable.py
ls2n_drones_cable/ls2n_drones_cable/models/cable/: .cable_v2.sh.swp  cable.modify  cable.sdf  cable.sdfwong  cable_v2.sh  model.config  test.erb  test_c1.erb  test_c2.erb
ls2n_drones_cable/ls2n_drones_cable/worlds/: drone_cables.world
ls2n_drones_cable/ls2n_drones_cable_gz_plugins/: CMakeLists.txt  package.xml
ls2n_drones_cable/ls2n_drones_cable_gz_plugins/include/: cable_init.h
ls2n_drones_cable/ls2n_drones_cable_gz_plugins/src/: cable_init.cc  cable_init1.cc
ls2n_fpr/: fpr.launch.py
ls2n_fpr/FX29K_for_Arduino/: FX29K.cpp  FX29K.h  FX29K_for_Arduino.ino  README.md
ls2n_fpr/ls2n_fpr_control/: CMakeLists.txt  package.xml
ls2n_fpr/ls2n_fpr_control/config/: param_fpr.yaml  traj_fpr.yaml
ls2n_fpr/ls2n_fpr_control/include/fpr_lib/: common_fpr.h  controller_fpr.h  csv_logger.h  model_fpr.h  observer_fpr.h  param_fpr.h  state_fpr.h
ls2n_fpr/ls2n_fpr_control/include/nodes/: autopilot_fpr.h
ls2n_fpr/ls2n_fpr_control/launch/: autopilot_fpr.launch.py  fpr.launch.py  fpr_teleop.launch.py  sitl_autopilot_fpr.launch.py  sitl_fpr_interaction.launch.py  trajectory_publisher.launch.py
ls2n_fpr/ls2n_fpr_control/models/flying_parallel_robot/: fpr.sdf  model.config
ls2n_fpr/ls2n_fpr_control/models/flying_parallel_robot/meshes/: Link1.stl  Link2.stl
ls2n_fpr/ls2n_fpr_control/models/fpr_interaction/: fpr_interaction.sdf  model.config
ls2n_fpr/ls2n_fpr_control/models/fpr_interaction/meshes/: leg.stl  platform.stl  tool.stl
ls2n_fpr/ls2n_fpr_control/scripts/: fpr_teleop_node.py  interaction_detector.py  plot_fpr_flightdata.py  plot_sensor_data.py  sensor_node.py  trajectory_publisher_node.py
ls2n_fpr/ls2n_fpr_control/src/fpr_lib/: common_fpr.cpp  controller_fpr.cpp  model_fpr.cpp  observer_fpr.cpp  param_fpr.cpp
ls2n_fpr/ls2n_fpr_control/src/nodes/: autopilot_fpr.cpp
ls2n_fpr/ls2n_fpr_control/test/: test_fpr_model.cpp
ls2n_fpr/ls2n_fpr_control/worlds/: fpr.world  fpr_interaction.world
ls2n_fpr/ls2n_fpr_gz_plugins/: CMakeLists.txt  package.xml
ls2n_fpr/ls2n_fpr_gz_plugins/include/: fpr_contact_sensor.h  fpr_init.h
ls2n_fpr/ls2n_fpr_gz_plugins/src/: fpr_contact_sensor.cc  fpr_init.cc
ls2n_fpr/ls2n_fpr_interfaces/: CMakeLists.txt  package.xml
ls2n_interfaces/: CMakeLists.txt  package.xml
ls2n_interfaces/msg/: AttitudeThrustSetPoint.msg  DroneStatus.msg  KeepAlive.msg  MotorControlSetPoint.msg  RatesThrustSetPoint.msg
ls2n_interfaces/srv/: DroneRequest.srv
ls2n_mpc_single_drone/: README.md  package.xml  setup.cfg  setup.py
ls2n_mpc_single_drone/launch/: single_drone_mpc.launch.py  sitl_single_drone_mpc.launch.py
ls2n_mpc_single_drone/ls2n_mpc_single_drone/: acados_settings.py  mpc_controller.py
ls2n_onboard_install/: README.md  first_install.sh  install_all_packages.sh  ros2_configure.sh  ros2_install.sh  serial_configure.sh  update_build.sh
ls2n_px4_ros_com/: CMakeLists.txt  README.md  package.xml
ls2n_px4_ros_com/onboard/: install_onboard.sh  onboard_CMakeLists.txt
ls2n_px4_ros_com/scripts/: generate_microRTPS_agent.py
ls2n_px4_ros_com/src/: microRTPS_timesync.cpp  microRTPS_timesync.h
ls2n_px4_ros_com/templates/: deserialize_wrapper.cpp.em  deserialize_wrapper.h.em  microRTPS_agent.cpp.em  microRTPS_agent.h.em  uorb_rtps_message_ids.yaml
ls2n_rqt_plugins/ls2n_rqt_command_center/: package.xml  plugin.xml  setup.cfg  setup.py
ls2n_rqt_plugins/ls2n_rqt_command_center/ls2n_rqt_command_center/: command_center.py  main.py
ls2n_rqt_plugins/ls2n_rqt_command_center/resource/: LS2N_UAVs.perspective  LS2N_UAVs_sitl.perspective  command_center.ui
ls2n_rqt_plugins/ls2n_rqt_delays/: package.xml  plugin.xml  setup.cfg  setup.py
ls2n_rqt_plugins/ls2n_rqt_drone_observers/: package.xml  plugin.xml  setup.cfg  setup.py
ls2n_rqt_plugins/ls2n_rqt_fake_joystick/: package.xml  plugin.xml  setup.cfg  setup.py
ls2n_rqt_plugins/ls2n_rqt_thrust_estimator/: README.md  package.xml  plugin.xml  setup.cfg  setup.py
ls2n_tools/: README.md  package.xml  setup.cfg  setup.py
ls2n_tools/launch/: moving_average.launch.yaml
ls2n_tools/ls2n_tools/: moving_average.py  rosbag_extract.py  trajectory_publisher.py  trajectory_tools.py
ls2n_tools/trajectories/: README.md  fpr_hovering.traj  fpr_test_orientation.traj  single_drone_complex.traj  single_drone_hovering.traj  single_drone_left_right.traj  single_drone_square.traj  single_drone_yaw.traj
(+43 files in other folders)
