<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ls2n_drone_command_center</name>
  <version>0.0.0</version>
  <description>A package containing the tools required to remotely control one or several drones at the LS2N laboratory.</description>
  <maintainer email="damien.six@ls2n.fr">Damien Six</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ls2n_interfaces</exec_depend>
  <exec_depend>ls2n_drone_bridge</exec_depend>
  <exec_depend>ls2n_rqt_command_center</exec_depend>
  <exec_depend>ls2n_rqt_delays</exec_depend>
  <exec_depend>ls2n_rqt_fake_joystick</exec_depend>
</package>
