<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ls2n_drone_onboard</name>
  <version>0.0.0</version>
  <description>Onboard nodes for companion computer on LS2N UAVs</description>
  <maintainer email="damien.six@ls2n.fr">user</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>ls2n_interfaces</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
</package>
