<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ls2n_px4_ros_com</name>
  <version>0.0.0</version>
  <description>Communication with PX4 using RTPS bridge and ROS2 topics. Similar to px4_ros_com but as a ROS2 node.</description>
  <maintainer email="damien.six@ls2n.fr">user</maintainer>
  <license>Appache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>fastcdr</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
