<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ls2n_tools</name>
  <version>0.0.0</version>
  <description>Several useful tools for LS2N drones</description>
  <maintainer email="damien.six@ls2n.fr">Damien SIX</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>python3-scipy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
