<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ls2n_drones_cable</name>
  <version>0.0.0</version>
  <description>Simulation/Control law for 2 drones with one cable</description>
  <maintainer email="gaohanbang@gmail.com">Hanbang GAO</maintainer>
  <license>Apache License 2.0</license>

  <depend>ls2n_drone_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
