<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ls2n_fpr_control</name>
  <version>0.0.0</version>
  <description>Control of the flying parallel robot</description>
  <maintainer email="damien.six@ls2n.fr">user</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ls2n_interfaces</depend>
  <depend>ls2n_fpr_interfaces</depend>
  <depend>ls2n_drone_command_center</depend>
  <depend>ls2n_drone_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
